enum ChatType {
  simple,
  group,
}
